WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61085
EqualPowerPanner is not using the correct azimuth range for stereo panning
https://bugs.webkit.org/show_bug.cgi?id=61085
Summary
EqualPowerPanner is not using the correct azimuth range for stereo panning
Chris Rogers
Reported
2011-05-18 12:17:35 PDT
EqualPowerPanner is not using the correct azimuth range for stereo panning
Attachments
Patch
(2.33 KB, patch)
2011-05-18 16:05 PDT
,
Chris Rogers
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2011-05-18 16:05:23 PDT
Created
attachment 93996
[details]
Patch
Chris Rogers
Comment 2
2011-05-18 16:10:16 PDT
The old code was panning in the range -30 -> +30 degrees which is correct for 5.1 front stereo speakers, but not simple stereo...
Chris Rogers
Comment 3
2011-05-18 16:14:38 PDT
Committed
r86801
: <
http://trac.webkit.org/changeset/86801
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug