2011-05-18  Chris Rogers  <crogers@google.com>

Reviewed by James Robinson.

        EqualPowerPanner is not using the correct azimuth range for stereo panning
        https://bugs.webkit.org/show_bug.cgi?id=61085

        No new tests since audio API is not yet implemented.

        * platform/audio/EqualPowerPanner.cpp:
        (WebCore::EqualPowerPanner::pan):


Canonical link: https://commits.webkit.org/76443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86801 268f45cc-cd09-0410-ab3c-d52691b4dbfc